# DGT_SO_PROJECT_21-22

./: CMakeLists.txt  Makefile  README.md  conf
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  book__master__shm_8c.html  book__master__shm_8c.js  book__master__shm_8c__incl.map  book__master__shm_8c__incl.md5  book__master__shm_8h.html  book__master__shm_8h.js  book__master__shm_8h__dep__incl.map  book__master__shm_8h__dep__incl.md5  book__master__shm_8h__incl.map  book__master__shm_8h__incl.md5  book__master__shm_8h_source.html  boolean_8c.html  boolean_8c.js  boolean_8c__incl.map  boolean_8c__incl.md5  boolean_8h.html  boolean_8h.js  boolean_8h__dep__incl.map  boolean_8h__dep__incl.md5  boolean_8h_source.html  classes.html  conf__file_8c.html  conf__file_8c.js  conf__file_8c__incl.map  conf__file_8c__incl.md5  conf__file_8h.html  conf__file_8h.js  conf__file_8h__dep__incl.map  conf__file_8h__dep__incl.md5  conf__file_8h__incl.map  conf__file_8h__incl.md5  conf__file_8h_source.html  conf__shm_8h.html  conf__shm_8h.js  conf__shm_8h__dep__incl.map  conf__shm_8h__dep__incl.md5  conf__shm_8h__incl.map  (+314 more)
docs/latex/: annotated.tex  book__master__shm_8c.tex  book__master__shm_8c__incl.md5  book__master__shm_8h.tex  book__master__shm_8h__dep__incl.md5  book__master__shm_8h__incl.md5  book__master__shm_8h_source.tex  boolean_8c.tex  boolean_8c__incl.md5  boolean_8h.tex  boolean_8h__dep__incl.md5  boolean_8h_source.tex  conf__file_8c.tex  conf__file_8c__incl.md5  conf__file_8h.tex  files.tex  (+151 more)
src/: conf  main.c  node_proc.c  node_tp_proc.c  user_proc.c
(+144 files in other folders)
